Adicionando media query

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 body {
-    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background: url(../projeto-redes-sociais/imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -22,7 +22,6 @@ main {
     position: relative;
     height: 100vh;
 }
-
 section#telefone {
     position: absolute;
     top: 50%;
@@ -30,7 +29,8 @@ section#telefone {
     transform: translate(-50%, -50%);
     height: 627px;
     width: 311px;
-    background: url(../imagens/frame-iphone.png) no-repeat;
+
+    background: url(../projeto-redes-sociais/imagens/frame-iphone.png) no-repeat;
 }
 
 iframe#tela {
